# Gumo-Editor

./: CMakeLists.txt  README.md  config.txt  gumo.c  gumo.h  gumo_serializer.c  gumo_serializer.h  main.c  notes.txt  resource.rc
content/: Tilemap_01.txt  map.txt
data/: config.txt
src/: entity.c  entity.h  layer.c  layer.h  tilemap.c  tilemap.h  tileset.c  tileset.h  utils.c  utils.h
